# MAI-Information-Retrieval

./: .gitignore  README.md  docker-compose.yml
search-engine/: CMakeLists.txt
search-engine/data/: sample.tsv  zipf.csv
search-engine/scripts/: zipf_plot.py
search-engine/src/: document.hpp  main.cpp
search-engine/src/cli/: cli.cpp  cli.hpp
search-engine/src/index/: index_builder.cpp  index_builder.hpp  term_data.hpp
search-engine/src/search/: boolean_query_parser.cpp  boolean_query_parser.hpp  search_engine.cpp  search_engine.hpp
search-engine/src/stemmer/: stemmer.cpp  stemmer.hpp
search-engine/src/structures/: hash_table.hpp  posting_list.hpp
search-engine/src/tokenizer/: html_strip.cpp  html_strip.hpp  tokenizer.cpp  tokenizer.hpp
search-engine/src/web/: web_server.cpp  web_server.hpp
web_crawler/: .env.template  Cargo.toml
web_crawler/config/: crawler.yaml
web_crawler/migrations/2025-12-17-215509-0000_urls/: down.sql  up.sql
web_crawler/src/: config.rs  crawler.rs  main.rs  models.rs  schema.rs
