[package]
name = "web_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
diesel = {version = "2.3.4", features = ["postgres"]}
dotenvy = "0.15"
mongodb = {version = "3.4.1", features = ["sync"]}
serde = "1.0.188"
yaml-rust = "0.4.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
html5ever = "0.36.1"
chrono = "0.4.42"
markup5ever_rcdom = "0.36.0+unofficial"

